--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/splash/launch-828x1792.jpg" />
+
     <meta name="theme-color" id="theme-color" content="#000">
 
     <link rel="manifest" href="manifest.json">
@@ -19,5 +21,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script src="app.ts"></script>
   </body>
 </html>
